--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
     "type": "phpbb-extension",
     "description": "Display the last post of the previous page on the top of viewtopic.",
     "homepage": "http://www.team-azerty.com",
-    "version": "1.0.0b",
-    "time": "2015-02-14",
+    "version": "1.0.0",
+    "time": "2015-02-21",
+    "keywords": ["phpbb", "extension", "post"],
     "license": "GPL-2.0",
     "authors": [
         {
@@ -20,6 +21,11 @@
         "display-name": "Display the last post",
         "soft-require": {
             "phpbb/phpbb": "3.1.*"
-        }
+        },
+	    "version-check": {
+				"host": "phpbb.team-azerty.com",
+				"directory": "/",
+				"filename": "DisplayLastPost.json"
+			}
     }
 }
