--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "Aurelienazerty/DisplayLastPost",
     "type": "phpbb-extension",
-    "description": "Display the last post of the previous page on the top of viewtopic.",
+    "description": "Display the lastest post of the previous page on the top of viewtopic.",
     "homepage": "http://www.team-azerty.com",
-    "version": "1.0.5",
-    "time": "2015-05-21",
+    "version": "1.1.0",
+    "time": "2015-08-03",
     "keywords": ["phpbb", "extension", "post"],
     "license": "GPL-2.0",
     "authors": [
@@ -23,9 +23,9 @@
             "phpbb/phpbb": "3.1.*"
         },
 	    "version-check": {
-				"host": "phpbb.team-azerty.com",
-				"directory": "/",
-				"filename": "DisplayLastPost.json"
-			}
+			"host": "phpbb.team-azerty.com",
+			"directory": "/",
+			"filename": "DisplayLastPost.json"
+		}
     }
 }
