--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "type": "phpbb-extension",
     "description": "Extension which displays the lastest post of the previous page on the top of viewtopic.",
     "homepage": "http://www.team-azerty.com",
-    "version": "1.1.6",
-    "time": "2016-03-31",
+    "version": "1.1.7",
+    "time": "2017-01-30",
     "keywords": ["phpbb", "extension", "post"],
     "license": "GPL-2.0",
     "authors": [
@@ -30,6 +30,14 @@
 		{
             "name": "HenLen",
             "role": "German Translator"
+        },
+		{
+            "name": "Walther",
+            "role": "Dutch Translator"
+        },
+		{
+            "name": "hd321kbps",
+            "role": "Russian Translator"
         }
     ],
     "require": {
@@ -38,7 +46,7 @@
    "extra": {
         "display-name": "Display Last Post",
         "soft-require": {
-            "phpbb/phpbb": "3.1.*"
+            "phpbb/phpbb": ">=3.1.*"
         },
 	    "version-check": {
 			"host": "phpbb.team-azerty.com",
