--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
    "extra": {
         "display-name": "Display Last Post",
         "soft-require": {
-            "phpbb/phpbb": ">=3.1.*"
+            "phpbb/phpbb": ">=3.1"
         },
 	    "version-check": {
 			"host": "phpbb.team-azerty.com",
