--- a/config/services.yml
+++ b/config/services.yml
@@ -5,5 +5,6 @@ services:
             - @dbal.conn
             - @config
             - @user
+            - @request
         tags:
             - { name: event.listener }
