--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "type": "phpbb-extension",
     "description": "Extension which displays the lastest post of the previous page on the top of viewtopic.",
     "homepage": "http://www.team-azerty.com",
-    "version": "1.1.7",
-    "time": "2017-01-30",
+    "version": "1.2.0",
+    "time": "2017-04-11",
     "keywords": ["phpbb", "extension", "post"],
     "license": "GPL-2.0",
     "authors": [
@@ -15,7 +15,7 @@
         },
 		{
             "name": "Théonaute",
-			"homepage": "http://www.phpbb-fr.com/",
+						"homepage": "http://www.phpbb-fr.com/",
             "role": "phpBB 3.0.x initial MOD developer"
         },
 		{
@@ -24,20 +24,12 @@
         },
 		{
             "name": "Raul [ThE KuKa]",
-			"homepage": "http://www.raularroyomonzo.es/",
+						"homepage": "http://www.raularroyomonzo.es/",
             "role": "Spanish Translator"
         },
 		{
             "name": "HenLen",
             "role": "German Translator"
-        },
-		{
-            "name": "Walther",
-            "role": "Dutch Translator"
-        },
-		{
-            "name": "hd321kbps",
-            "role": "Russian Translator"
         }
     ],
     "require": {
@@ -46,12 +38,12 @@
    "extra": {
         "display-name": "Display Last Post",
         "soft-require": {
-            "phpbb/phpbb": ">=3.1"
+            "phpbb/phpbb": "3.1.*"
         },
 	    "version-check": {
-			"host": "phpbb.team-azerty.com",
-			"directory": "/",
-			"filename": "DisplayLastPost.json"
+			"host": "www.phpbb.com",
+			"directory": "/customise/db/extension/displaylastpost",
+      "filename": "version_check"
 		}
     }
 }
